Fix more spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,5 @@ body {
 .banner-body {
   font-size: 2rem;
   font-style: italic;
-  padding-top: .5em;
-  margin: 0 0 .5em;
+  margin-top: .6em;
 }
